<resources>
    <string name="app_name">My Application</string>

    <string name="titre">Salary calculation</string>
    <string name="btn">calculate</string>
    <string name="textview1">Number of hours</string>
    <string name="textview2">Child</string>
    <string name="rd1">Permanent</string>
    <string name="rd2">Temporary</string>
    <string name="ch">Married</string>
    <string name="t1">Children</string>
    <string name="msg">Problem</string>

</resources>